[gd_scene load_steps=3 format=3 uid="uid://qhn8i8vfa0to"]

[ext_resource type="Script" path="res://Scripts/PuzzleUI.gd" id="1_4gvni"]
[ext_resource type="Script" path="res://Scripts/AnswerArea.gd" id="2_d0nma"]

[node name="PuzzleUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4gvni")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InstructionsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Palette" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AnswerArea" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_d0nma")

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
